--- a/jeremy/movie_aspnet_model/MvcMovie/src/MvcMovie/Views/Movies/Edit.cshtml
+++ b/jeremy/movie_aspnet_model/MvcMovie/src/MvcMovie/Views/Movies/Edit.cshtml
@@ -1,5 +1,4 @@
 @model MvcMovie.Models.Movie
-
 @{
     ViewData["Title"] = "Edit";
 }
@@ -38,6 +37,13 @@
             <div class="col-md-10">
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="Rating" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Rating" class="form-control" />
+                <span asp-validation-for="Rating" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
