Added our story :)

--- a/jeremy/part4 - Copy/ShoppingCart/Views/Home/About.cshtml
+++ b/jeremy/part4 - Copy/ShoppingCart/Views/Home/About.cshtml
@@ -4,4 +4,7 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Hey, this website is now changed; has different content than before. This webpage is for telling you about my fake business website.</p>
+<div>
+    <img src="https://media.giphy.com/media/QgixZj4y3TwnS/giphy.gif" alt="W3Schools.com">
+</div>
