--- a/jeremy/part4 - Copy/ShoppingCart/Views/Home/Contact.cshtml
+++ b/jeremy/part4 - Copy/ShoppingCart/Views/Home/Contact.cshtml
@@ -5,13 +5,16 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    2800 Palmyra Rd<br />
+    Hannibal, MO 634019<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    573.629.3000
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>HLGU Website:</strong>   <a href="http://www.hlg.edu">Click here :)</a><br />
+    
 </address>
+<div>
+    <img src="https://i.giphy.com/PmpA5ohOUl1xC.gif" alt="W3Schools.com">
+</div>
