--- a/jeremy/part4 - Copy/ShoppingCart/Views/Home/Index.cshtml
+++ b/jeremy/part4 - Copy/ShoppingCart/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>Jamie's Shopping Cart</h1>
-    <p class="lead">Shop for your favorite books, we've got the best prices.</p>
-    <p><a href="@Url.Action("About")" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>RiverCity Industrial Diamonds</h1>
+    <p class="lead">Shop for your favorite books, even though this is a diamond store.</p>
+    <p><a href="@Url.Action("About")" class="btn btn-primary btn-lg">Learn more I guess &raquo;</a></p>
 </div>
 
 @Html.Action("Featured", "Books")
